# BattleShip

./: .gitignore  CMakeLists.txt  README.md
lib/Commands/: MasterCommandHandler.cpp  MasterCommandHandler.h  SlaveCommandHandler.cpp  SlaveCommandHandler.h
lib/Master/: Master.cpp  Master.h
lib/RandomShips/: RandomShips.cpp  RandomShips.h
lib/ReadWriteQueue/: ReadWriteQueue.cpp  ReadWriteQueue.h
lib/Settings/: Settings.cpp  Settings.h
lib/Ship/: Ship.cpp  Ship.h
lib/Slave/: Slave.cpp  Slave.h
lib/Utils/: FileUtils.cpp  FileUtils.h  PrintUtils.cpp  PrintUtils.h
